# audio-cli

./: .gitmodules  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/cli/: mod.rs
src/cli/helper/: mod.rs  tokenizer.rs
src/command/: mod.rs
src/command/interpreter/: mod.rs
src/command/interpreter/helper/: mod.rs  tokenizer.rs
src/control/: mod.rs
src/interface/: mod.rs
