[package]
name = "audio-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
backend = { path = "backend", package = "audio-backend" }
colored = "3"
log = "0.4"
simplelog = "0.12"
smart-repl = { path = "smart-repl" }

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"

[lints.clippy]

# pedantic
pedantic = { level = "warn", priority = -1 }
#missing_errors_doc = "allow"
#missing_panics_doc = "allow"
#must_use_candidate = "allow"
needless_pass_by_value = "allow"
#too_many_lines = "allow"

# restriction
empty_structs_with_brackets = "warn"
if_then_some_else_none = "warn"
print_stderr = "warn"
rc_buffer = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"
